--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 
-    "version":          "1.1",
+    "version":          "1.3",
     "manifest_version": 2,
     "name":             "Balu",
     "options_page":     "options.html",
@@ -8,9 +8,11 @@
     "offline_enabled":  false,
 
     "background": {
-        "scripts":     ["js/parse-1.4.2.min.js",
-                        "js/background.js"],
-        "persistent": true
+        "scripts":     ["js/externalJS/parse-1.4.2.min.js",
+                        "js/BG_logging.js",
+                        "js/BG_APIs.js",
+                        "js/BG_main.js"],
+        "persistent": false
     },
 
     "browser_action": {
@@ -22,24 +24,28 @@
 
     "content_scripts": [{
         "matches":    ["*://*/*"],
-        "js":         ["js/search.js","js/content_script.js"],
+        "js":         ["js/CS_APIs.js",
+                       "js/CS_search.js",
+                       "js/CS_main.js"],
         "run_at":     "document_end"
     }],
 
     "web_accessible_resources": [
+        "options.html",
+        "userSubmittedRec.html",
+
         "images/*.jpg",
         "images/*.png",
-        "js/inject_script.js",
-        "options.html",
+
         "css/foundation.css",
         "css/app.css",
         "css/foundation-icons.css",
         "css/foundation-icons.woff",
         "css/foundation-icons.ttf",
         "css/app-icons.css",
-        "js/vendor/modernizr.js",
-        "js/vendor/jquery.js",
-        "js/foundation.min.js"
+        "css/opentip.css",
+
+        "js/externalJS/opentip-native.js"
     ],
 
     "permissions": [
