--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 
-    "version":          "1.3",
+    "version":          "1.5",
     "manifest_version": 2,
     "name":             "Balu",
     "options_page":     "options.html",
@@ -12,7 +12,7 @@
                         "js/BG_logging.js",
                         "js/BG_APIs.js",
                         "js/BG_main.js"],
-        "persistent": false
+        "persistent": true
     },
 
     "browser_action": {
@@ -26,26 +26,34 @@
         "matches":    ["*://*/*"],
         "js":         ["js/CS_APIs.js",
                        "js/CS_search.js",
-                       "js/CS_main.js"],
+                       "js/CS_main.js",
+                       "js/externalJS/jquery-2.1.4.min.js"],
         "run_at":     "document_end"
     }],
 
     "web_accessible_resources": [
         "options.html",
         "userSubmittedRec.html",
+        "userSubmittedWebsiteRec.html",
+        "blockBrand.html",
 
         "images/*.jpg",
         "images/*.png",
 
+        "js/IF_main.js",
+
+        "js/externalJS/jquery-2.1.4.min.js",
+        "js/externalJS/jquery.qtip.min.js",
+        "js/externalJS/vendor/modernizr.js",
+        "js/externalJS/vendor/fastclick.js",
+        "js/externalJS/foundation.min.js",
         "css/foundation.css",
         "css/app.css",
         "css/foundation-icons.css",
         "css/foundation-icons.woff",
         "css/foundation-icons.ttf",
         "css/app-icons.css",
-        "css/opentip.css",
-
-        "js/externalJS/opentip-native.js"
+        "css/jquery.qtip.min.css"
     ],
 
     "permissions": [
